# xyts-strategy-sdk

./: CMakeLists.txt  README.md
include/xydata/: bar.h  contract.h  depth.h  sessions.h  tick.h  trading_calendar.h
include/xyts/base/: code_mapping.h  contract_table.h  error_code.h  formatter.h  log.h  market_data.h  timeout_manager.h  trade_msg.h  version.h
include/xyts/component/: shared_trade_state.h  trade_utility.h
include/xyts/core/: code_mapping.h  contract_table.h  error_code.h  executor.h  formatter.h  log.h  market_data.h  timeout_manager.h  trade_msg.h  version.h
include/xyts/custom/: binance_futures_data_types.h
include/xyts/data_collector/: collected_data_handler.h  collected_data_handler_factory.h  collected_data_type.h  data_collector.h
include/xyts/data_feed/: data_feed_api.h  data_feed_api_factory.h  data_feed_spi.h
include/xyts/market_data_filter/: market_data_filter.h  market_data_filter_factory.h
include/xyts/simulation/: matching_engine.h  matching_engine_factory.h  order_event_listener.h
include/xyts/strategy/: algo_trading_service.h  arbitrage_manager.h  bar_generator.h  bar_strategy.h  condition_order_manager.h  depth_behavior_analyzer.h  grid_trading_bot.h  indicator.h  main_contract_detector.h  order_manager.h  (+12 more)
include/xyu/: calendar.h  csv.h  datetime.h  dynamic_library.h  file.h  file_util.h  filesystem.h  map_util.h  memory_mapping.h  misc.h  rdtsc_clock.h  spinlock.h  string_utils.h  thread_pool.h  time.h  timeline.h  timeout_queue.h  trading_calendar.h  tsc_clock.h  utility.h
tools/: strategy_param_mgr_generator.py
(+45 files in other folders)
